update index.html from screen

--- a/public/Kanbas/Dashboard/screen.html
+++ b/public/Kanbas/Dashboard/screen.html
@@ -177,8 +177,16 @@
                       >
                         CS1234 React JS</a
                       >
-                      <p class="card-text">Full Stack software developer</p>
-                      <a html="#" class="btn btn-primary"> Go </a>
+                      <!-- <p class="card-text">Full Stack software developer</p> -->
+                      <p class="text-muted">
+                        CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                      </p>
+                      <a
+                        href="/Kanbas/Courses/Home/screen.html"
+                        class="btn btn-primary"
+                      >
+                        Go
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -202,8 +210,16 @@
                       >
                         CS5002 Math</a
                       >
-                      <p class="card-text">Full Stack software developer</p>
-                      <a html="#" class="btn btn-primary"> Go </a>
+                      <!-- <p class="card-text">Full Stack software developer</p> -->
+                      <p class="text-muted">
+                        CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                      </p>
+                      <a
+                        href="/Kanbas/Courses/Home/screen.html"
+                        class="btn btn-primary"
+                      >
+                        Go
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -227,8 +243,16 @@
                       >
                         CS5004 Java OOD</a
                       >
-                      <p class="card-text">Full Stack software developer</p>
-                      <a html="#" class="btn btn-primary"> Go </a>
+                      <!-- <p class="card-text">Full Stack software developer</p> -->
+                      <p class="text-muted">
+                        CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                      </p>
+                      <a
+                        href="/Kanbas/Courses/Home/screen.html"
+                        class="btn btn-primary"
+                      >
+                        Go
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -252,8 +276,16 @@
                       >
                         CS5008 Algo</a
                       >
-                      <p class="card-text">Full Stack software developer</p>
-                      <a html="#" class="btn btn-primary"> Go </a>
+                      <!-- <p class="card-text">Full Stack software developer</p> -->
+                      <p class="text-muted">
+                        CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                      </p>
+                      <a
+                        href="/Kanbas/Courses/Home/screen.html"
+                        class="btn btn-primary"
+                      >
+                        Go
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -278,8 +310,16 @@
                       >
                         CS5700 Networks</a
                       >
-                      <p class="card-text">Full Stack software developer</p>
-                      <a html="#" class="btn btn-primary"> Go </a>
+                      <!-- <p class="card-text">Full Stack software developer</p> -->
+                      <p class="text-muted">
+                        CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                      </p>
+                      <a
+                        href="/Kanbas/Courses/Home/screen.html"
+                        class="btn btn-primary"
+                      >
+                        Go
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -303,8 +343,16 @@
                       >
                         CS6210 NLP</a
                       >
-                      <p class="card-text">Full Stack software developer</p>
-                      <a html="#" class="btn btn-primary"> Go </a>
+                      <!-- <p class="card-text">Full Stack software developer</p> -->
+                      <p class="text-muted">
+                        CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                      </p>
+                      <a
+                        href="/Kanbas/Courses/Home/screen.html"
+                        class="btn btn-primary"
+                      >
+                        Go
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -328,8 +376,16 @@
                       >
                         CS5200 DBMS</a
                       >
-                      <p class="card-text">Full Stack software developer</p>
-                      <a html="#" class="btn btn-primary"> Go </a>
+                      <!-- <p class="card-text">Full Stack software developer</p> -->
+                      <p class="text-muted">
+                        CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                      </p>
+                      <a
+                        href="/Kanbas/Courses/Home/screen.html"
+                        class="btn btn-primary"
+                      >
+                        Go
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -337,7 +393,7 @@
             </div>
           </div>
 
-          <!-- End of Bottom: ourse Cards-->
+          <!-- End of Bottom: course Cards-->
         </div>
 
         <!-- End of Right: Content Page -->
