--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -74,7 +74,7 @@
           <!-- collapse toggle menu  -->
           <nav class="navbar navbar-expand-md navbar-light bg-light">
             <!-- Toggle buttons for Kanbas and Course Navigation -->
-            <!-- Kanbas Nav Modal -->
+            <!-- Kanbas Nav Modal toggle -->
             <button
               class="btn btn-primary navbar-toggler"
               type="button"
@@ -83,7 +83,7 @@
             >
               <i class="fas fa-bars"></i>
             </button>
-            <!-- Course Nav Collapse -->
+            <!-- Course Nav Collapse toggle-->
             <button
               class="navbar-toggler"
               type="button"
@@ -96,7 +96,7 @@
               <i class="fas fa-chevron-down"></i>
             </button>
           </nav>
-          <!-- Kanbas Navigation Modal-->
+          <!-- Kanbas Nav Modal-->
           <div
             class="modal fade"
             id="navModal"
@@ -158,7 +158,7 @@
               </div>
             </div>
           </div>
-          <!-- Course Navigation Collapse -->
+          <!-- Course Nav Collapse -->
           <div class="collapse" id="courseNav">
             <ul class="wd-kanbas-nav-collapse card">
               <li class="wd-kanbas-nav-collapse-active">
@@ -182,70 +182,6 @@
             </ul>
           </div>
 
-          <!-- experiment:  -->
-
-          <div
-            class="modal fade"
-            id="navModal"
-            tabindex="-1"
-            aria-labelledby="navModalLabel"
-            aria-hidden="true"
-          >
-            <div class="modal-dialog modal-fullscreen">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button
-                    type="button"
-                    class="btn-close"
-                    data-bs-dismiss="modal"
-                    aria-label="Close"
-                  ></button>
-                </div>
-                <div class="modal-body">
-                  <!-- Content for the fullscreen window -->
-                  <ul class="wd-kanbas-nav-collapse">
-                    <li>
-                      <a href="/Kanbas/Account/Profile/screen.html">
-                        <i class="fa fa-user" id="wd-account-icon"></i
-                        >Account</a
-                      >
-                    </li>
-                    <li>
-                      <a href="/Kanbas/Dashboard/screen.html">
-                        <i class="fas fa-tachometer-alt"></i>Dashboard</a
-                      >
-                    </li>
-                    <li class="wd-kanbas-nav-collapse-active">
-                      <a href="/Kanbas/Courses/Home/screen.html"
-                        ><i class="fa fa-book"></i>Courses</a
-                      >
-                    </li>
-                    <li>
-                      <a href="#"
-                        ><i class="far fa-calendar-alt"></i>Calendar</a
-                      >
-                    </li>
-                    <li>
-                      <a href="#"><i class="fa fa-inbox"></i>Inbox</a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="far fa-clock"></i>History</a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="fa fa-laptop"></i>Studio</a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="fas fa-sign-out-alt"></i>Commons</a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="fa fa-question-circle"></i>Help</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- end of experiment: modal -->
           <!-- end of collapse toggle menu  -->
           <!-- Top: Breadcrumb -->
           <nav class="mt-4 container-fluid" aria-label="breadcrumb">
