--- a/public/Kanbas/Dashboard/index.html
+++ b/public/Kanbas/Dashboard/index.html
@@ -3,20 +3,23 @@
     <link href="/libs/bootstrap/bootstrap.min.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="p-4">
+    <div class="p-4 ms-2">
       <!-- Dashboard Title -->
       <h1>Dashboard</h1>
       <hr />
+
       <!-- Published Courses -->
-      <h2>Published Courses (12)</h2>
+      <h2>Published Courses (7)</h2>
       <hr />
-      <!-- Single Row all cards-->
+
+      <!-- Single Row all cards -->
       <div class="row">
         <!-- row-cols-1 sets the number of col to 1 for xs screen size -->
         <!-- row-cols-md-5 sets the number of col to 5 for md screen size -->
         <!-- g-4 sets the gap between the col to 4 units (16px)  -->
         <div class="row row-cols-1 row-cols-md-5 g-4">
           <!-- Course 1 -->
+          <!-- The widths of the courses are set to 300px  -->
           <div class="col" style="width: 300px">
             <div class="card">
               <img
@@ -32,8 +35,16 @@
                 >
                   CS1234 React JS</a
                 >
-                <p class="card-text">Full Stack software developer</p>
-                <a html="#" class="btn btn-primary"> Go </a>
+                <!-- <p class="card-text">Full Stack software developer</p> -->
+                <p class="text-muted">
+                  CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                </p>
+                <a
+                  href="/Kanbas/Courses/Home/screen.html"
+                  class="btn btn-primary"
+                >
+                  Go
+                </a>
               </div>
             </div>
           </div>
@@ -53,8 +64,16 @@
                 >
                   CS5002 Math</a
                 >
-                <p class="card-text">Full Stack software developer</p>
-                <a html="#" class="btn btn-primary"> Go </a>
+                <!-- <p class="card-text">Full Stack software developer</p> -->
+                <p class="text-muted">
+                  CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                </p>
+                <a
+                  href="/Kanbas/Courses/Home/screen.html"
+                  class="btn btn-primary"
+                >
+                  Go
+                </a>
               </div>
             </div>
           </div>
@@ -74,8 +93,16 @@
                 >
                   CS5004 Java OOD</a
                 >
-                <p class="card-text">Full Stack software developer</p>
-                <a html="#" class="btn btn-primary"> Go </a>
+                <!-- <p class="card-text">Full Stack software developer</p> -->
+                <p class="text-muted">
+                  CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                </p>
+                <a
+                  href="/Kanbas/Courses/Home/screen.html"
+                  class="btn btn-primary"
+                >
+                  Go
+                </a>
               </div>
             </div>
           </div>
@@ -95,8 +122,16 @@
                 >
                   CS5008 Algo</a
                 >
-                <p class="card-text">Full Stack software developer</p>
-                <a html="#" class="btn btn-primary"> Go </a>
+                <!-- <p class="card-text">Full Stack software developer</p> -->
+                <p class="text-muted">
+                  CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                </p>
+                <a
+                  href="/Kanbas/Courses/Home/screen.html"
+                  class="btn btn-primary"
+                >
+                  Go
+                </a>
               </div>
             </div>
           </div>
@@ -117,8 +152,16 @@
                 >
                   CS5700 Networks</a
                 >
-                <p class="card-text">Full Stack software developer</p>
-                <a html="#" class="btn btn-primary"> Go </a>
+                <!-- <p class="card-text">Full Stack software developer</p> -->
+                <p class="text-muted">
+                  CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                </p>
+                <a
+                  href="/Kanbas/Courses/Home/screen.html"
+                  class="btn btn-primary"
+                >
+                  Go
+                </a>
               </div>
             </div>
           </div>
@@ -138,8 +181,16 @@
                 >
                   CS6210 NLP</a
                 >
-                <p class="card-text">Full Stack software developer</p>
-                <a html="#" class="btn btn-primary"> Go </a>
+                <!-- <p class="card-text">Full Stack software developer</p> -->
+                <p class="text-muted">
+                  CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                </p>
+                <a
+                  href="/Kanbas/Courses/Home/screen.html"
+                  class="btn btn-primary"
+                >
+                  Go
+                </a>
               </div>
             </div>
           </div>
@@ -159,8 +210,16 @@
                 >
                   CS5200 DBMS</a
                 >
-                <p class="card-text">Full Stack software developer</p>
-                <a html="#" class="btn btn-primary"> Go </a>
+                <!-- <p class="card-text">Full Stack software developer</p> -->
+                <p class="text-muted">
+                  CS5610.11744.202310<br />Fall 2033 Semester Full Term
+                </p>
+                <a
+                  href="/Kanbas/Courses/Home/screen.html"
+                  class="btn btn-primary"
+                >
+                  Go
+                </a>
               </div>
             </div>
           </div>
