--- a/public/Kanbas/Courses/Grades/index.html
+++ b/public/Kanbas/Courses/Grades/index.html
@@ -3,33 +3,22 @@
   <body>
     <!-- row 1: Buttons on the top of this column -->
     <div class="d-flex">
-      <!-- buttons group -->
-      <div class="flex-fill">
-        <div class="d-flex float-end">
-          <div>
-            <button class="btn btn-light text-muted me-2">
-              <i class="fas fa-file-import me-2"></i>Import
-            </button>
-          </div>
-          <!-- Export dropdown button  -->
-          <!-- <button class="btn btn-light me-2">
-                <i class="fa fa-sign-out me-2"></i>Export
-              </button> -->
-          <div>
-            <select class="form-select btn btn-light text-muted me-2">
-              <option><i class="fas fa-file-export me-2"></i>Export</option>
-              <option>Export Current Gradebook View</option>
-              <option>Export Entire Gradebook</option>
+      <!-- placeholder -->
+      <div class="flex-fill"></div>
+      <!-- buttons -->
+      <span class="float-end"
+        ><button class="btn btn-light me-2">
+          <i class="fas fa-file-import me-2"></i>Import</button
+        ><button class="btn btn-light me-2">
+          <div class="d-flex align-items-center">
+            <i class="fas fa-file-export me-2"></i>
+            <select class="form-select">
+              <option>Export</option>
             </select>
-          </div>
-          <div>
-            <!-- End of Export dropdown button  -->
-            <button class="btn btn-light me-2">
-              <i class="fas fa-cog"></i>
-            </button>
-          </div>
-        </div>
-      </div>
+          </div></button
+        ><button class="btn btn-ligh me-2">
+          <i class="fas fa-cog"></i></button
+      ></span>
     </div>
 
     <!-- row 2: dropdowns -->
