--- a/public/Kanbas/Courses/Home/index.html
+++ b/public/Kanbas/Courses/Home/index.html
@@ -1,101 +1,323 @@
 <html>
-  <head></head>
-  <body>
-    <table>
-      <tbody>
-        <tr>
-          <!-- Home Left Side Column: Modules -->
-          <td>
-            <!-- 3 buttons and a dropdown -->
-            <button>Collapse All</button>
-            <button>View Progress</button>
-            <select>
-              <option value="Publish All">Publish All</option>
-              <option value="Unpublish All">Unpublish All</option>
-            </select>
-            <button>+ Module</button>
-            <hr />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/libs/bootstrap/bootstrap.min.css" />
 
-            <!-- course modules -->
-            <ul>
-              <li>
-                Week 0 - INTRO
-                <ul>
-                  <li>
-                    Learning Objectives
-                    <ul>
-                      <li>Introduction to the course</li>
-                      <li>Learn what is Web Development</li>
-                      <li>Createing a Development Environment</li>
-                      <li>Createing a Web Application</li>
-                    </ul>
-                  </li>
-                  <li>
-                    READING
-                    <ul>
-                      <li>Chapter 1</li>
-                      <li>Chapter 2</li>
-                    </ul>
-                  </li>
-                  <li>
-                    SLIDES
-                    <ul>
-                      <li><a href="">Intro to Web Dev</a></li>
-                      <li><a href="">HTTP Server</a></li>
-                    </ul>
-                  </li>
-                </ul>
+    <!-- <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css" /> -->
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="/Kanbas/styles.css" />
+    <link rel="stylesheet" href="/Kanbas/Navigation/index.css" />
+    <link rel="stylesheet" href="/Kanbas/Courses/Navigation/index.css" />
+    <link rel="stylesheet" href="/Kanbas/Courses/Modules/index.css" />
+    <link rel="stylesheet" href="/Kanbas/Courses/Home/index.css" />
+  </head>
+  <body>
+    <div class="d-flex">
+      <!-- left: Modules -->
+      <div class="flex-grow-1 me-2">
+        <!-- row 1: Buttons on the top of this column -->
+        <div class="d-flex">
+          <!-- placeholder -->
+          <div class="flex-fill"></div>
+          <!-- buttons -->
+          <span class="float-end"
+            ><button class="btn btn-light">Collapse All</button
+            ><button class="btn btn-light">View Progress</button
+            ><button class="btn btn-light">
+              <div class="d-flex align-items-center">
+                <i class="fa fa-check-circle text-success me-2"></i>
+                <select class="form-select">
+                  <option>Publish All</option>
+                </select>
+              </div></button
+            ><button class="btn btn-danger">+ Module</button
+            ><button class="btn btn-light">
+              <i class="fa fa-ellipsis-v"></i></button
+          ></span>
+        </div>
+        <hr />
+
+        <!-- module group -->
+        <div class="flex-fill mt-4">
+          <div class="card wd-modules">
+            <div class="card-header">
+              <i class="fa fa-ellipsis-v"></i> Week 1<span class="float-end"
+                ><i class="fa fa-check-circle text-success"></i>
+                <i class="fa fa-plus"></i>
+                <i class="fa fa-ellipsis-v"></i>
+              </span>
+            </div>
+            <ul class="list-group list-group-flush">
+              <!-- item  -->
+              <li class="list-group-item">
+                <div class="d-flex">
+                  <i class="fa fa-ellipsis-v"></i>
+                  <span class="d-flex flex-fill align-items-center"
+                    >LEARNING OBJECTIVES</span
+                  >
+
+                  <span class="float-end">
+                    <i class="fa fa-check-circle text-success"></i>
+                    <i class="fa fa-ellipsis-v"></i>
+                  </span>
+                </div>
               </li>
-              <li>
-                Week 1 - HTML
-                <ul>
-                  <li>Learning Objectives</li>
-                  <ul>
-                    <li>Getting Started with the 1st Assignment</li>
-                  </ul>
-                  <li>
-                    READING
-                    <ul>
-                      <li>Chapter 3</li>
-                    </ul>
-                  </li>
-                </ul>
+              <!-- end of item  -->
+              <!-- sub-item  -->
+              <li class="list-group-item">
+                <div class="d-flex">
+                  <i class="fa fa-ellipsis-v"></i>
+
+                  <div class="d-flex flex-fill ps-4 align-items-center">
+                    sub-item
+                  </div>
+
+                  <span class="float-end">
+                    <i class="fa fa-check-circle text-success"></i>
+                    <i class="fa fa-ellipsis-v"></i>
+                  </span>
+                </div>
               </li>
+              <!-- end of sub-item  -->
+              <!-- sub-item  -->
+              <li class="list-group-item">
+                <div class="d-flex">
+                  <i class="fa fa-ellipsis-v"></i>
+
+                  <div class="d-flex flex-fill ps-4 align-items-center">
+                    sub-item
+                  </div>
+
+                  <span class="float-end">
+                    <i class="fa fa-check-circle text-success"></i>
+                    <i class="fa fa-ellipsis-v"></i>
+                  </span>
+                </div>
+              </li>
+              <!-- end of sub-item  -->
+              <!-- sub-item  -->
+              <li class="list-group-item">
+                <div class="d-flex">
+                  <i class="fa fa-ellipsis-v"></i>
+
+                  <div class="d-flex flex-fill ps-4 align-items-center">
+                    sub-item
+                  </div>
+
+                  <span class="float-end">
+                    <i class="fa fa-check-circle text-success"></i>
+                    <i class="fa fa-ellipsis-v"></i>
+                  </span>
+                </div>
+              </li>
+              <!-- end of sub-item  -->
+
+              <!-- item  -->
+              <li class="list-group-item">
+                <div class="d-flex">
+                  <i class="fa fa-ellipsis-v"></i>
+                  <span class="d-flex flex-fill align-items-center"
+                    >READING</span
+                  >
+
+                  <span class="float-end">
+                    <i class="fa fa-check-circle text-success"></i>
+                    <i class="fa fa-ellipsis-v"></i>
+                  </span>
+                </div>
+              </li>
+              <!-- end of item  -->
+              <!-- sub-item  -->
+              <li class="list-group-item">
+                <div class="d-flex">
+                  <i class="fa fa-ellipsis-v"></i>
+
+                  <div class="d-flex flex-fill ps-4 align-items-center">
+                    sub-item
+                  </div>
+
+                  <span class="float-end">
+                    <i class="fa fa-check-circle text-success"></i>
+                    <i class="fa fa-ellipsis-v"></i>
+                  </span>
+                </div>
+              </li>
+              <!-- end of sub-item  -->
             </ul>
-          </td>
-          <!-- Home Right Side Column: Course Status -->
-          <td valign="TOP">
-            <h3>Course Status</h3>
-            <!-- buttons on top  -->
-            <table>
-              <tbody>
-                <tr>
-                  <td>
-                    <button>Unpublish</button>
-                  </td>
-                  <td>
-                    <button>Published</button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <!--  links -->
-            <ul>
-              <li><a href="">Import Existing Content</a></li>
-              <li><a href="">Import From Commons</a></li>
-              <li><a href="">Choose Home Page</a></li>
-              <li><a href="">New Announcement</a></li>
-              <li><a href="">New Analystics</a></li>
+          </div>
+        </div>
+        <!-- end of module group -->
+
+        <!-- module group -->
+        <div class="flex-fill mt-4">
+          <div class="card wd-modules">
+            <div class="card-header">
+              <i class="fa fa-ellipsis-v"></i> Week 2<span class="float-end"
+                ><i class="fa fa-check-circle text-success"></i>
+                <i class="fa fa-plus"></i>
+                <i class="fa fa-ellipsis-v"></i>
+              </span>
+            </div>
+            <ul class="list-group list-group-flush">
+              <!-- item  -->
+              <li class="list-group-item">
+                <div class="d-flex">
+                  <i class="fa fa-ellipsis-v"></i>
+                  <span class="d-flex flex-fill align-items-center"
+                    >LEARNING OBJECTIVES</span
+                  >
+
+                  <span class="float-end">
+                    <i class="fa fa-check-circle text-success"></i>
+                    <i class="fa fa-ellipsis-v"></i>
+                  </span>
+                </div>
+              </li>
+              <!-- end of item  -->
+              <!-- sub-item  -->
+              <li class="list-group-item">
+                <div class="d-flex">
+                  <i class="fa fa-ellipsis-v"></i>
+
+                  <div class="d-flex flex-fill ps-4 align-items-center">
+                    sub-item
+                  </div>
+
+                  <span class="float-end">
+                    <i class="fa fa-check-circle text-success"></i>
+                    <i class="fa fa-ellipsis-v"></i>
+                  </span>
+                </div>
+              </li>
+              <!-- end of sub-item  -->
+              <!-- sub-item  -->
+              <li class="list-group-item">
+                <div class="d-flex">
+                  <i class="fa fa-ellipsis-v"></i>
+
+                  <div class="d-flex flex-fill ps-4 align-items-center">
+                    sub-item
+                  </div>
+
+                  <span class="float-end">
+                    <i class="fa fa-check-circle text-success"></i>
+                    <i class="fa fa-ellipsis-v"></i>
+                  </span>
+                </div>
+              </li>
+              <!-- end of sub-item  -->
+              <!-- sub-item  -->
+              <li class="list-group-item">
+                <div class="d-flex">
+                  <i class="fa fa-ellipsis-v"></i>
+
+                  <div class="d-flex flex-fill ps-4 align-items-center">
+                    sub-item
+                  </div>
+
+                  <span class="float-end">
+                    <i class="fa fa-check-circle text-success"></i>
+                    <i class="fa fa-ellipsis-v"></i>
+                  </span>
+                </div>
+              </li>
+              <!-- end of sub-item  -->
+
+              <!-- item  -->
+              <li class="list-group-item">
+                <div class="d-flex">
+                  <i class="fa fa-ellipsis-v"></i>
+                  <span class="d-flex flex-fill align-items-center"
+                    >READING</span
+                  >
+
+                  <span class="float-end">
+                    <i class="fa fa-check-circle text-success"></i>
+                    <i class="fa fa-ellipsis-v"></i>
+                  </span>
+                </div>
+              </li>
+              <!-- end of item  -->
+              <!-- sub-item  -->
+              <li class="list-group-item">
+                <div class="d-flex">
+                  <i class="fa fa-ellipsis-v"></i>
+
+                  <div class="d-flex flex-fill ps-4 align-items-center">
+                    sub-item
+                  </div>
+
+                  <span class="float-end">
+                    <i class="fa fa-check-circle text-success"></i>
+                    <i class="fa fa-ellipsis-v"></i>
+                  </span>
+                </div>
+              </li>
+              <!-- end of sub-item  -->
             </ul>
-            <h3>Coming Up</h3>
-            <a href="">View Calander</a>
-            <ul>
-              <li><a href="">Lecture CS4550 at Sep 7 11:45am</a></li>
-              <li><a href="">Lecture CS5610 at Sep 11 6pm</a></li>
-            </ul>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+          </div>
+        </div>
+        <!-- end of module group -->
+      </div>
+
+      <!-- right: Status -->
+      <div class="d-none d-xl-block ms-4">
+        <h5>Course Status</h5>
+        <hr />
+        <!-- buttons on top  -->
+        <div class="d-flex mb-4">
+          <button class="flex-fill btn btn-light">
+            <i class="fas fa-ban me-2"></i>Unpublish
+          </button>
+
+          <button class="flex-fill btn btn-success">Published</button>
+        </div>
+        <!-- links -->
+        <div class="d-flex flex-column">
+          <button class="btn btn-light flex-fill text-start" type="button">
+            Import Existing Content
+          </button>
+          <button class="btn btn-light flex-fill mt-2 text-start" type="button">
+            Import From Commons
+          </button>
+          <button class="btn btn-light flex-fill mt-2 text-start" type="button">
+            Choose Home Page
+          </button>
+          <button class="btn btn-light flex-fill mt-2 text-start" type="button">
+            New Announcement
+          </button>
+          <button class="btn btn-light flex-fill mt-2 text-start" type="button">
+            New Analytics
+          </button>
+        </div>
+
+        <h5 class="mt-4">To Do</h5>
+        <hr />
+        <ul>
+          <li class="list-group-item"><a href="#">Task 1</a></li>
+          <li class="list-group-item"><a href="#">Task 2</a></li>
+        </ul>
+
+        <h5>Coming Up</h5>
+        <hr />
+        <!-- <a href="">View Calander</a> -->
+        <ul>
+          <li class="list-group-item">
+            <a href="#">Lecture CS4550 at Sep 7 11:45am</a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">Lecture CS5610 at Sep 11 6pm</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
