--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       <li><a href="/labs/a2/index.html">Assignment 2</a></li>
       <li><a href="/Kanbas/Dashboard/screen.html">Kanbas Dashboard</a></li>
       <li>
-        <a href="Kanbas/Courses/Modules/index.html">Testing: Module index</a>
+        <a href="/Kanbas/Courses/Home/index.html">Testing</a>
       </li>
       <!-- <li><a href="/labs/a3/index.html">Assignment 3</a></li> -->
       <!-- <li><a href="/Kanbas/Courses/Home/screen.html">Kanbas</a></li> -->
